# fla

./: CMakeLists.txt
fla-project/: TM.cpp  TM.h  main.cpp  message.cpp  message.h  pda.cpp  pda.h  utils.cpp  utils.h
pda/: case.pda
tm/: case1.tm
